<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:gravity="center_horizontal">
  <TableRow
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_marginTop="20dp">
  <TextView
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:ems="6"
  android:text="@string/p0201_tv"
  android:textSize="16sp"
   ></TextView>
  <EditText
  android:layout_width="140dp"
  android:layout_height="wrap_content"
   android:id="@+id/e0201"
  ></EditText>
  </TableRow>
  
   <TableRow
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
   <TextView
  android:layout_width="114sp"
  android:layout_height="wrap_content"
  android:text="密                 碼"
  android:textSize="16sp"
  ></TextView>
  <EditText
  android:layout_width="140dp"
  android:layout_height="wrap_content"
  android:password="true"
   android:id="@+id/e0202"
  ></EditText>
   </TableRow>
  
  <Button
  android:id="@+id/k0201"
  android:text="@string/k0201_str"
  android:layout_width="120dp"
  android:layout_height="wrap_content"
  android:layout_marginTop="20dp"
  ></Button>
  
  <Button
  android:layout_width="120dp"
  android:layout_height="wrap_content"
  android:text="@string/k0202_str"
  android:id="@+id/k0202"
  ></Button>
  
  <Button
  android:layout_width="120dp"
  android:layout_height="wrap_content"
  android:text="@string/k0203_str"
  android:id="@+id/k0203"
  ></Button>
                                
  <Button
  android:layout_width="120dp"
  android:layout_height="wrap_content"
  android:text="@string/k0204_str"
  android:id="@+id/k0204"
  ></Button>
  
  
</LinearLayout>
