<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    
    <TableRow
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="7"
    android:text="@string/p0301_tv"/>
    <EditText
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/p0301_et"/>
    </TableRow>
    
    <TableRow
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="7"
    android:text="@string/p0302_tv"/>
    <EditText
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/p0302_et"/>
    </TableRow>
    
    <TableRow
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="7"
    android:text="@string/p0303_tv"/>
    <EditText
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/p0303_et"/>
    </TableRow>
    
    <TableRow
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="7"
    android:text="@string/p0304_tv"/>
    <EditText
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/p0304_et"/>
    </TableRow>
    
    <TableRow
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="7"
    android:text="@string/p0305_tv"/>
    <EditText
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/p0305_et"/>
    </TableRow>
    
    <TableRow
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="7"
    android:text="@string/p0306_tv"/>
    <Spinner
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/p0306_sp">
    </Spinner>>
    </TableRow>
    
     <TableRow
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="7"
    android:text="@string/p0307_tv"/>
    <EditText
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/p0307_et"/>
    </TableRow>
    <Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="注册"
    android:id="@+id/k0301_btn"/>
    <Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="退出"
    android:id="@+id/k0302"/>
     
     </LinearLayout>
