<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
   
  <TableRow
  android:layout_marginTop="20dp"
  android:layout_marginLeft="20dp"
  android:layout_marginBottom="5dp"
  android:layout_width="fill_parent"                     
  android:layout_height="wrap_content">
  <!-- p2301_tv 手機碼-->
  <TextView
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/p2301_tv"
  android:layout_marginRight="10dp"
  ></TextView>
  <!-- p2301_ev 手機號碼-->
  <EditText
  android:ems="10"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/p2301_ev"
  android:enabled="false"
  android:id="@+id/p2301_et"
  ></EditText>
  </TableRow>
  <TableRow

  android:layout_marginLeft="20dp"
  android:layout_marginBottom="5dp"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
  <!-- p2302_tv 久密碼-->
  <TextView
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_marginRight="10dp"
  android:text="@string/p2302_tv"
  ></TextView>
  <EditText
  android:ems="10"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:hint="******"
  android:password="true"
  android:id="@+id/p2302_et"
  ></EditText>
  </TableRow>
  <TableRow
  android:layout_marginLeft="20dp"
  android:layout_marginBottom="5dp"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
  <!-- p2303_tv 新密碼-->
  <TextView
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_marginRight="10dp"
  android:text="@string/p2303_tv"
  ></TextView>
  <EditText
  android:ems="10"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:hint="******"
  android:password="true"
  android:id="@+id/p2303_et"
  ></EditText>
  </TableRow>
  <TableRow
  android:layout_marginBottom="5dp"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
  <!-- p2304_tv 確認新密碼-->
  <TextView
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_marginRight="10dp"
  android:text="@string/p2304_tv"
  ></TextView>
  <EditText
  android:ems="10"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:hint="******"
  android:password="true"
  android:id="@+id/p2304_et"
  ></EditText>
  </TableRow>
  
  <!-- k2301_btn 確認修改-->
  <Button
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_gravity="center"
  android:layout_marginTop="20dp"
  android:text="@string/k2301_btn"
  android:id="@+id/k2301_btn"
  ></Button>
  
</LinearLayout>
