<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"  
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:gravity="center_horizontal"
  >
  <TextView
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="选择乘机人"
  ></TextView>
  
  <TableRow
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:paddingTop="20dp"
  >
  <CheckBox
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="唐亮"
  android:id="@+id/p0701_cb"
  ></CheckBox>
  
  <Button
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/k703"
  android:id="@+id/p0702_btn"
  ></Button>
  
  <Button
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/k704"
  android:id="@+id/p0703_btn"
  ></Button>
  </TableRow>
  
  <TableRow
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:paddingTop="20dp"
  >
  <CheckBox
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="张三"
  android:id="@+id/p0704_cb"
  ></CheckBox>
  
  <Button
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/k703"
  android:id="@+id/p0705_btn"
  ></Button>
  
  <Button
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/k704"
  android:id="@+id/p0706_btn"
  ></Button>
  </TableRow>
  
   <TableRow
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:paddingTop="20dp"
  >
  <Button
  android:layout_width="120dp"
  android:layout_height="wrap_content"
  android:text="@string/k701"
  android:id="@+id/p0707_btn"
  ></Button>
  </TableRow>
  
  
  <Button
  android:layout_width="120dp"
  android:layout_height="wrap_content"
  android:text="@string/k702"
  android:id="@+id/p0708_btn"
  ></Button>
</LinearLayout>
